--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
         "php": ">=7.1.3",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "^5.8.0",
+        "laravel/framework": "5.6.0",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "nunomaduro/collision": "~1.1",
+        "nunomaduro/collision": "1.1",
         "phpunit/phpunit": "~7.0",
         "symfony/thanks": "^1.0"
     },
